Added prep and ingredients

--- a/index.html
+++ b/index.html
@@ -6,6 +6,43 @@
     <title>Recipe </title>
 </head>
 <body>
-    
+
+    <!-- Picture below this: -->
+
+    <!-- Recipe site location:  -->
+    <section>
+        <ul>
+            <h2>Ingredients: </h2>
+            <li>Ham</li>
+            <li>Dijon Mustard</li>
+            <li>Brown Sugar</li>
+            <li>Granulated Garlic</li>
+            <li>Onion Powder</li>
+            <li>Paprika</li>
+            <li>Ground Cloves</li>
+            <li>Ground Ginger</li>
+            <li>Hard Apple Cider</li>
+            <li>Apple Jelly</li>
+            <li>Apple Cider Vinegar</li>
+            <li>Stone Ground Mustard</li>
+        </ul>
+    </section>
+
+
+    <h1> Prepartion: </h1>
+    <section>
+        <ol>
+            <li>Prepare and Smoke the Ham: </li>
+            <li>Preheat your smoker to 200°F. Apply dijon mustard and the dry rub to the ham, then smoke for 2 hours.</li>
+            <li>Braise the Ham:</li>
+            <li>Trasnfer the ham to a grill-safe pan, add hard apple cider, cover tightly with foil, and increase the temperature to 325°F. Cook until the internal temperature reaches 200°-204°.</li>
+            <li>Make the Glase:</li>
+            <li>While the ham cooks, prepare the glaze be combing all ingredients in a saucepan and simmering for 5 minutes.</li>
+            <li>Shred and Mix:</li>
+            <li>Once cooked, shred the ham using protective gloves and mix in some of the cooking liquids for added moisture.</li>
+            <li>Apply the Glaze and serve:</li>
+            <li>Drizzle the shredded ham with the prepared glaze and serve hot.</li>
+        </ol>
+    </section>
 </body>
 </html>
