Added pic and link

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 <body>
 
     <!-- Picture below this: -->
+    <img src="https://www.foodista.com/sites/default/files/Smoked%20Pulled%20Ham-2%20copy.jpg" alt="The Smoke Pulled Ham picture didn't load properly" width="330" height="256">    <!-- Recipe site location:  -->
+     <a href="https://www.foodista.com/recipe/XRD5Z435/Smoked%2BPulled%2BHam"> Foodista: Smoked Pulled Ham</a>
 
-    <!-- Recipe site location:  -->
+    <h1>Ingredients: </h1>
     <section>
         <ul>
-            <h2>Ingredients: </h2>
+            
             <li>Ham</li>
             <li>Dijon Mustard</li>
             <li>Brown Sugar</li>
