fixed some positions

--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe </title>
+    <title>Foodiesta: Smoked Pulled Ham </title>
 </head>
 <body>
-
+    <h1> Smoked Pulled Ham</h1>
     <!-- Picture below this: -->
-    <img src="https://www.foodista.com/sites/default/files/Smoked%20Pulled%20Ham-2%20copy.jpg" alt="The Smoke Pulled Ham picture didn't load properly" width="330" height="256">    <!-- Recipe site location:  -->
+    <img src="https://www.foodista.com/sites/default/files/Smoked%20Pulled%20Ham-2%20copy.jpg" alt="The Smoke Pulled Ham picture didn't load properly" width="330" height="256">    
+    
+    <nav>
+    <!-- Recipe site location:  -->
      <a href="https://www.foodista.com/recipe/XRD5Z435/Smoked%2BPulled%2BHam"> Foodista: Smoked Pulled Ham</a>
+    </nav>
 
     <h2>About:</h2>
-    <p>Our tender, <strong>incredible Smoked Pulled Ham Recipe</strong>, a dish that melds rich flavors with the slow-cooking technique of smoking. This recipe uses a savory dry rub and a unique braising liquid to infuse the ham with deep, complex flavors. Finished with a sweet and tangy apple jelly glaze, this smoked ham transitions from a simple cut of meat to a mouth-watering centerpiece perfect for any gathering or family meal. is a dish that combines the rich flavors of a double-smoked ham with the tangy sweetness of our apple glaze. This recipe uses a savory dry rub and a unique braising liquid to infuse the ham with deep, complex flavors. Finished with a sweet and tangy apple jelly glaze, this smoked ham transitions from a simple cut of meat to a mouth-watering centerpiece perfect for any gathering or family meal. Will create 6 servings. .</p>
+    <p>Our tender, <strong>incredible Smoked Pulled Ham Recipe</strong>, a dish that melds rich flavors with the slow-cooking technique of smoking. This recipe uses a savory dry rub and a unique braising liquid to infuse the ham with deep, complex flavors. Finished with a sweet and tangy apple jelly glaze, this smoked ham transitions from a simple cut of meat to a mouth-watering centerpiece perfect for any gathering or family meal. is a dish that combines the rich flavors of a double-smoked ham with the tangy sweetness of our apple glaze. This recipe uses a savory dry rub and a unique braising liquid to infuse the ham with deep, complex flavors. Finished with a sweet and tangy apple jelly glaze, this smoked ham transitions from a simple cut of meat to a mouth-watering centerpiece perfect for any gathering or family meal. Will create 6 servings.</p>
     <section>
         <h1>Ingredients: </h1>
         <ul>    
