--- a/index.html
+++ b/index.html
@@ -3,36 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foodiesta: Smoked Pulled Ham </title>
+    <title>Foodiesta: Peas stew </title>
 </head>
 <body>
     <h1> Smoked Pulled Ham</h1>
     <!-- Picture below this: -->
-    <img src="https://www.foodista.com/sites/default/files/Smoked%20Pulled%20Ham-2%20copy.jpg" alt="The Smoke Pulled Ham picture didn't load properly" width="330" height="256">    
+    <img src="https://www.foodista.com/sites/default/files/EC_Peas%20stew-face.jpg" alt="The Peas Stew picture didn't load properly" width="330" height="256">    
     
     <nav>
     <!-- Recipe site location:  -->
-     <a href="https://www.foodista.com/recipe/XRD5Z435/Smoked%2BPulled%2BHam"> Foodista: Smoked Pulled Ham</a>
+     <a href="https://www.foodista.com/recipe/GKHNLDCS/Peas%2Bstew"> Foodista: Peas stew</a>
     </nav>
 
     <h2>About:</h2>
-    <p>Our tender, <strong>incredible Smoked Pulled Ham Recipe</strong>, a dish that melds rich flavors with the slow-cooking technique of smoking. This recipe uses a savory dry rub and a unique braising liquid to infuse the ham with deep, complex flavors. Finished with a sweet and tangy apple jelly glaze, this smoked ham transitions from a simple cut of meat to a mouth-watering centerpiece perfect for any gathering or family meal. is a dish that combines the rich flavors of a double-smoked ham with the tangy sweetness of our apple glaze. This recipe uses a savory dry rub and a unique braising liquid to infuse the ham with deep, complex flavors. Finished with a sweet and tangy apple jelly glaze, this smoked ham transitions from a simple cut of meat to a mouth-watering centerpiece perfect for any gathering or family meal. Will create 6 servings.</p>
+    <p>A hearty, nutritious stew simmered in a tomato sauce is a perfect choice for chilly days.</p>
 
     <section>
         <h2>Ingredients: </h2>
         <ul>    
-            <li>Ham</li>
-            <li>Dijon Mustard</li>
-            <li>Brown Sugar</li>
-            <li>Granulated Garlic</li>
-            <li>Onion Powder</li>
-            <li>Paprika</li>
-            <li>Ground Cloves</li>
-            <li>Ground Ginger</li>
-            <li>Hard Apple Cider</li>
-            <li>Apple Jelly</li>
-            <li>Apple Cider Vinegar</li>
-            <li>Stone Ground Mustard</li>
+            <li>30 ml(2 tbs) olive oil</li>
+            <li>300 g smoked cured ham, cut into cubes</li>
+            <li>1 Onion, chopped</li>
+            <li>400 g of fresh or frozen peas</li>
+            <li>500 f tomato puree</li>
+            <li>450 ml water</li>
+            <li>1/4 tsp sea salt</li>
+            <li>1/4 tsp ground black pepper</li>
+            <li>(or 1/2 tbs Vegeta Natur )</li>
+            <li>400 g potatoes, peeled, and cut into small cubes</li>
+            <li>1 tbs sugar</li>
         </ul>
     </section>
 
@@ -41,17 +40,9 @@
     <section>
         <h2>Prepartion: </h2>
         <ol>
-            
-            <li>Prepare and Smoke the Ham: </li>
-            <li>Preheat your smoker to 200°F. Apply dijon mustard and the dry rub to the ham, then smoke for 2 hours.</li>
-            <li>Braise the Ham:</li>
-            <li>Trasnfer the ham to a grill-safe pan, add hard apple cider, cover tightly with foil, and increase the temperature to 325°F. Cook until the internal temperature reaches 200°-204°.</li>
-            <li>Make the Glase:</li>
-            <li>While the ham cooks, prepare the glaze be combing all ingredients in a saucepan and simmering for 5 minutes.</li>
-            <li>Shred and Mix:</li>
-            <li>Once cooked, shred the ham using protective gloves and mix in some of the cooking liquids for added moisture.</li>
-            <li>Apply the Glaze and serve:</li>
-            <li>Drizzle the shredded ham with the prepared glaze and serve hot.</li>
+            <li>Fry the cubed smoked cured ham in olive oil for about 5 minutes, stirring constantly. Stir in onion and sauté for about 2 minutes.</li>
+            <li>Add peas, tomato puree, water, salt and pepper or Vegeta Natur, stir to combine the ingrdients.</li>
+            <li>Add potato cubes, and a spoonful of sugar at the end. Cover the pot, let the stew boil, then reduce the flame and cook for about 15 minutes or until the potatoes are soft.</li>
         </ol>
     </section>
 </body>
