--- a/index.html
+++ b/index.html
@@ -1,49 +1,67 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foodiesta: Peas stew </title>
-</head>
-<body>
-    <h1> Smoked Pulled Ham</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Foodiesta: Peas stew</title>
+  </head>
+  <body>
+    <h1>Smoked Pulled Ham</h1>
     <!-- Picture below this: -->
-    <img src="https://www.foodista.com/sites/default/files/EC_Peas%20stew-face.jpg" alt="The Peas Stew picture didn't load properly" width="330" height="256">    
-    
+    <img
+      src="https://www.foodista.com/sites/default/files/EC_Peas%20stew-face.jpg"
+      alt="The Peas Stew picture didn't load properly"
+      width="330"
+      height="256"
+    />
+
     <nav>
-    <!-- Recipe site location:  -->
-     <a href="https://www.foodista.com/recipe/GKHNLDCS/Peas%2Bstew"> Foodista: Peas stew</a>
+      <!-- Recipe site location:  -->
+      <a href="https://www.foodista.com/recipe/GKHNLDCS/Peas%2Bstew">
+        Foodista: Peas stew</a
+      >
     </nav>
 
     <h2>About:</h2>
-    <p>A hearty, nutritious stew simmered in a tomato sauce is a perfect choice for chilly days.</p>
+    <p>
+      A hearty, nutritious stew simmered in a tomato sauce is a perfect choice
+      for chilly days.
+    </p>
 
     <section>
-        <h2>Ingredients: </h2>
-        <ul>    
-            <li>30 ml(2 tbs) olive oil</li>
-            <li>300 g smoked cured ham, cut into cubes</li>
-            <li>1 Onion, chopped</li>
-            <li>400 g of fresh or frozen peas</li>
-            <li>500 f tomato puree</li>
-            <li>450 ml water</li>
-            <li>1/4 tsp sea salt</li>
-            <li>1/4 tsp ground black pepper</li>
-            <li>(or 1/2 tbs Vegeta Natur )</li>
-            <li>400 g potatoes, peeled, and cut into small cubes</li>
-            <li>1 tbs sugar</li>
-        </ul>
+      <h2>Ingredients:</h2>
+      <ul>
+        <li>30 ml(2 tbs) olive oil</li>
+        <li>300 g smoked cured ham, cut into cubes</li>
+        <li>1 Onion, chopped</li>
+        <li>400 g of fresh or frozen peas</li>
+        <li>500 f tomato puree</li>
+        <li>450 ml water</li>
+        <li>1/4 tsp sea salt</li>
+        <li>1/4 tsp ground black pepper</li>
+        <li>(or 1/2 tbs Vegeta Natur )</li>
+        <li>400 g potatoes, peeled, and cut into small cubes</li>
+        <li>1 tbs sugar</li>
+      </ul>
     </section>
 
-
-    
     <section>
-        <h2>Prepartion: </h2>
-        <ol>
-            <li>Fry the cubed smoked cured ham in olive oil for about 5 minutes, stirring constantly. Stir in onion and sauté for about 2 minutes.</li>
-            <li>Add peas, tomato puree, water, salt and pepper or Vegeta Natur, stir to combine the ingrdients.</li>
-            <li>Add potato cubes, and a spoonful of sugar at the end. Cover the pot, let the stew boil, then reduce the flame and cook for about 15 minutes or until the potatoes are soft.</li>
-        </ol>
+      <h2>Preparation:</h2>
+      <ol>
+        <li>
+          Fry the cubed smoked cured ham in olive oil for about 5 minutes,
+          stirring constantly. Stir in onion and sauté for about 2 minutes.
+        </li>
+        <li>
+          Add peas, tomato puree, water, salt and pepper or Vegeta Natur, stir
+          to combine the ingrdients.
+        </li>
+        <li>
+          Add potato cubes, and a spoonful of sugar at the end. Cover the pot,
+          let the stew boil, then reduce the flame and cook for about 15 minutes
+          or until the potatoes are soft.
+        </li>
+      </ol>
     </section>
-</body>
+  </body>
 </html>
