--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <nav>
       <!-- Recipe site location:  -->
       <a href="https://www.foodista.com/recipe/GKHNLDCS/Peas%2Bstew">
-        Foodista: Peas stew</a
-      >
+        Foodista: Peas stew
+      </a>
     </nav>
 
     <h2>About:</h2>
